<resources>
    <string name="app_name">MP Manage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="channel_name">Notification_control_mediaplayer</string>
    <string name="channel_description">Notification_control_mediaplayer</string>
    <string name="name_user">Tên:</string>
    <string name="email_user">Email:</string>
    <string name="password">Mật Khẩu: ******</string>
    <string name="anh_bia">Ảnh Bìa</string>
    <string name="edit">Chỉnh Sửa</string>
    <string name="avatar">Ảnh Đại Điện</string>
    <string name="cancel">Hủy</string>
    <string name="add">Thêm</string>
    <string name="name_song">Tên Bài Hát</string>
    <string name="create_new_playlist">Tạo Playlist Mới</string>
    <string name="new_username">New Username</string>
    <string name="change_username">Đổi Username</string>
    <string name="mat_khau">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Đổi Mật Khẩu</string>
    <string name="enter_password">Nhập Mật Khẩu</string>
    <string name="change_email">Đổi Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm">Xác Nhận</string>
    <string name="add_playlist">Thêm Playlist</string>
    <string name="enter_name_playlist">Nhập Tên Playlist:</string>
    <string name="register">Đăng Ký</string>
    <string name="have_accout">Đã có tài khoản?</string>
    <string name="login">Đăng Nhập</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="music_player_vip_pro">Music Player Vip Pro Nội Bộ</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Quên mật Khẩu</string>
    <string name="not_have_account">Chưa có tài khoản?</string>
    <string name="register_now">Đăng Ký Ngay</string>
    <string name="enter_email_address">Nhập Địa Chỉ Email:</string>
    <string name="back">Quay Trở Lại</string>
    <string name="enter_confirm_code">Nhập Mã Xác Nhận:</string>
    <string name="confirm_code">Mã Xác Nhận</string>
    <string name="doi_mat_khau">Đổi Mật Khẩu</string>
    <string name="finish">Hoàn Thành</string>
    <string name="chu_de">Chủ Đề</string>
    <string name="the_loai">Thể Loại</string>
    <string name="bai_hat">Bài Hát</string>
    <string name="xem_them">Xem thêm</string>
    <string name="album">Album</string>
    <string name="play_random">Phát Ngẫu Nhiên</string>
    <string name="add_song">Thêm Bài Hát</string>
    <string name="no_song">Không có bài hát</string>
    <string name="start_time_play">00:00</string>
    <string name="name_singer">Tên Ca Sĩ</string>
    <string name="name_playlist">Tên Playlist</string>
    <string name="name_album">Tên Album</string>
    <string name="delete">Xóa</string>
    <string name="stt">stt</string>
    <string name="no_info">Không Có Dữ Liệu :(</string>
    <string name="album_hot">ALBUM HOT</string>
    <string name="song">Bài Hát</string>
    <string name="singer">Ca Sĩ</string>
    <string name="playlists">Playlists</string>
    <string name="loading">Đang Lấy Dữ Liệu</string>
    <string name="category"><![CDATA[Chủ Đề & Thể Loại]]></string>
    <string name="song_play">Bài Hát:</string>
    <string name="singer_play">Ca Sĩ:</string>
    <string name="album_play">Album:</string>
    <string name="no_data">Không Có Dữ Liệu</string>
    <string name="dang_tai">Loading....!</string>
    <string name="you_may_like">Có Thể Bạn Sẽ Thích</string>
    <string name="search_recent">Tìm Kiếm Gần Đây...</string>
    <string name="play_recent">Nghe Gần Gần Đây</string>
    <string name="no_result">Không Tìm Thấy Kết Quả</string>
    <string name="singer_goi_y">Nghệ Sĩ Nổi Bật</string>
    <string name="bxh">Bảng Xếp Hạng</string>
    <string name="edit_info_user">Chỉnh Sửa Thông Tin</string>
    <string name="logout">Đăng Xuất</string>
    <string name="banner">Quảng Cáo</string>
    <string name="header_nav_main">header_nav_main</string>
    <string name="music_player_vjp_pro">Music Player Vip Pro</string>
    <string name="list_song">Danh Sách Bài Hát</string>
    <string name="hide">Ẩn Bớt</string>
    <string name="view_more">Xem Thêm</string>
    <string name="search">Tìm Kiếm</string>
    <string name="tenbaihat">Tên Bài Hát</string>
    <string name="link_hinh_bai_hat">Link Hình Bài Hát</string>
    <string name="hinh_bai_hat">Hình Bài hát:</string>
    <string name="link">Link</string>
    <string name="file">File</string>
    <string name="img_baihat">img_baihat</string>
    <string name="file_bai_hat">File Bài hát:</string>
    <string name="link_flie_bai_hat">Link File Bài Hát</string>
    <string name="select_file">Click Vào Đây Để Chọn File</string>
    <string name="casi">Ca Sĩ</string>
    <string name="ten_ca_si">Tên Ca Sĩ</string>
    <string name="add_singer">Thêm Ca Sĩ</string>
    <string name="xong">Xong</string>
    <string name="them">Thêm</string>
    <string name="infomation">Thông Tin</string>
    <string name="id_bai_hat">Id Bài Hát:</string>
    <string name="link_hinh">Link Hình</string>
    <string name="link_nhac">Link Nhac</string>
    <string name="like">Lượt Thích</string>
    <string name="list_song_banner">Danh Sách Quảng Cáo</string>
    <string name="content">Nội Dung</string>
    <string name="poster">Poster</string>
    <string name="change_song">Đổi bài Hát</string>
    <string name="name">Tên</string>
    <string name="hinh_minh_hoa">Hình Minh Họa</string>
    <string name="link_poster">Link Poster</string>
    <string name="add_chude">Thêm Chủ Đề</string>
    <string name="add_theloai">Thêm Thể Loại</string>
    <string name="List_playlists">Danh Sách Playlist</string>
    <string name="list_album">Danh Sách Album</string>
    <string name="add_album">Thêm Album</string>
    <string name="list_singer">Danh Sách Ca Sĩ</string>
    <string name="info">Thông Tin</string>
    <string name="da_phat_hanh">Đã Phát Hành</string>
    <string name="mpvp">Music Player Vip Pro</string>
    <string name="admin">Admin</string>
</resources>