<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_login"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/music2" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_login"
            android:layout_centerInParent="true"
            android:layout_marginTop="35dp"
            android:text="@string/welcome"
            android:textColor="#0d6e6a"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/newaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_centerHorizontal="true"
            android:text="@string/music_player_vip_pro"
            android:textColor="#0d6e6a"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_input_email_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newaccount"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="35dp"
            tool:boxCornerRadiusBottomEnd="10dp"
            tool:boxCornerRadiusBottomStart="10dp"
            tool:boxCornerRadiusTopEnd="10dp"
            tool:boxCornerRadiusTopStart="10dp"
            tool:boxStrokeColor="@color/boxInputFields"
            tool:endIconMode="clear_text"
            tool:hintTextColor="@color/boxInputFields"
            tool:placeholderText="Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColorHint="#000"
                android:textSize="22sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_input_password_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_input_email_login"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="35dp"
            tool:boxCornerRadiusBottomEnd="10dp"
            tool:boxCornerRadiusBottomStart="10dp"
            tool:boxCornerRadiusTopEnd="10dp"
            tool:boxCornerRadiusTopStart="10dp"
            tool:boxStrokeColor="@color/boxInputFields"
            tool:endIconMode="password_toggle"
            tool:hintTextColor="@color/boxInputFields"
            tool:placeholderText="Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mat_khau"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="#000"
                android:textSize="22sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_input_password_login"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/forgot_password"
            android:textColor="#0d6e6a"
            android:textSize="16sp"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forget_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="#099A94"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="25sp"
            tool:cornerRadius="45dp"
            tool:elevation="35dp"
            tools:targetApi="lollipop" />


    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
