<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/update_casi_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_ten_ca_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_casi_toolbar"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/name_singer"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ten_playlist"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ten_ca_si"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:inputType="textLongMessage"
            app:boxStrokeColor="#05789C"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_ten_casi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_singer"
                android:maxLength="100"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/til_ten_playlist"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="25dp"
            android:background="#A5A1A1" />

        <LinearLayout
            android:id="@+id/linear_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hinh_minh_hoa_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/avatar"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rd_hinh_casi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rd_link_hinh_casi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#036A7E"
                    android:checked="true"
                    android:text="@string/link"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:id="@+id/rd_file_hinh_casi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:buttonTint="#036A7E"
                    android:text="@string/file"
                    tools:ignore="UnusedAttribute" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_link_hinh_album"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginTop="5dp"
                        android:inputType="textLongMessage"
                        app:boxStrokeColor="#05789C"
                        app:errorEnabled="false"
                        app:hintEnabled="false"
                        app:prefixTextColor="#05789C"
                        app:suffixTextColor="#05789C">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_link_hinh_casi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/link_hinh"
                            android:maxLength="400"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_get_hinh_casi"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/select_file"
                        android:textColor="#373737"
                        android:visibility="gone" />

                </RelativeLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_hinh_casi"
                    android:layout_width="35mm"
                    android:layout_height="35mm"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/img_baihat"
                    android:src="@drawable/ic_image"
                    tools:ignore="InOrMmUsage" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/linear_poster"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="25dp"
            android:background="#A5A1A1" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view2"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_finish_update_casi"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#018893"
                android:paddingVertical="12dp"
                android:text="@string/finish"
                android:textAllCaps="false"
                tools:targetApi="lollipop" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_update_casi"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:paddingVertical="12dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:strokeColor="@color/black" />
        </LinearLayout>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>

